Add docs around Kotlin constructor default values
relates to: https://github.com/creek-service/creek-json-schema/issues/203

--- a/generator/src/test/resources/test/types/org.creekservice.test.types.kotlin_model.yml
+++ b/generator/src/test/resources/test/types/org.creekservice.test.types.kotlin_model.yml
@@ -9,3 +9,9 @@ properties:
     type: string
   prop2:
     type: string
+    default: a default value
+  prop3:
+    type: string
+    default: another default
+required:
+- prop1
