Improve temporal type handling
part of: https://github.com/creek-service/creek-kafka/issues/463

- `Instant` now serialized as `string`, inline with Jackson, with `date-time` format
- `LocalTime` no longer marked as `time` format, as serialized form is missing offset.
- `OffsetTime` now supported: `string` with `time` format
- `OffsetDateTime` now supported: `string` with `date-time` format
- `MonthDay` now supported: `string`
- `YearMonth` now supported: `string`
- `Year` now supported: `string`
- `Duration` now supported: `number`, inline with Jackson
- `Period` now supported: `string` with `duration` format, inline with Jackson

The changes to how `Instant` and `LocalTime` are handled are breaking changes, but as they
were incompatible with Jackson, this is seen more as a bugfix.

--- a/generator/src/test/resources/test/types/org.creekservice.test.types.format_model.yml
+++ b/generator/src/test/resources/test/types/org.creekservice.test.types.format_model.yml
@@ -5,23 +5,21 @@ title: Format Model
 type: object
 additionalProperties: false
 properties:
+  date:
+    type: string
+    format: date
   dateTime:
     type: string
     format: date-time
   instant:
-    $ref: '#/definitions/Instant'
+    type: string
+    format: date-time
+  period:
+    type: string
+    format: duration
+  time:
+    type: string
+    format: time
   uri:
     type: string
     format: uri
-definitions:
-  Instant:
-    type: object
-    additionalProperties: false
-    properties:
-      nanos:
-        type: integer
-      seconds:
-        type: integer
-    required:
-    - nanos
-    - seconds
