JPMS compatible schema output paths.
JPMS requires resources that are accessible from outside the module to be in _unique_ and _open_ packages.

To achieve this, we introduce a `OutputLocationStrategy` option to the generator, which defaults to placing the generated schema in a directory tree that matches the package layout of the source types.

This means, if the `--output-directory` is set to the resource root of a project, the schema files are located in the same package as the source types in the resulting jar file.

--- a/generator/src/test/resources/schemas/flat/org.creekservice.test.types.JacksonModel.yml
+++ b/generator/src/test/resources/schemas/flat/org.creekservice.test.types.JacksonModel.yml
@@ -1,13 +1,13 @@
 ---
-# timestamp=1652261637077
+# timestamp=1706376038135
 $schema: http://json-schema.org/draft-07/schema#
-title: Simple Model
+title: Jackson Model
 type: object
 additionalProperties: false
 properties:
-  intProp:
-    type: integer
-  stringProp:
+  optional_prop:
+    type: string
+  required_prop:
     type: string
 required:
-- intProp
+- required_prop
