--- a/generator/src/test/resources/schemas/flat/org.creekservice.test.types.SimpleModel.yml
+++ b/generator/src/test/resources/schemas/flat/org.creekservice.test.types.SimpleModel.yml
@@ -1,13 +1,13 @@
 ---
-# timestamp=1652261637083
+# timestamp=1706376038151
 $schema: http://json-schema.org/draft-07/schema#
-title: Jackson Model
+title: Simple Model
 type: object
 additionalProperties: false
 properties:
-  optional_prop:
-    type: string
-  required_prop:
+  intProp:
+    type: integer
+  stringProp:
     type: string
 required:
-- required_prop
+- intProp
