--- a/generator/src/test/resources/schemas/flat/org.creekservice.test.types.Thing.yml
+++ b/generator/src/test/resources/schemas/flat/org.creekservice.test.types.Thing.yml
@@ -1,36 +1,36 @@
 ---
-# timestamp=1652261637068
+# timestamp=1706376038159
 $schema: http://json-schema.org/draft-07/schema#
-title: Polymorphic Model
+title: Thing
 oneOf:
-- $ref: '#/definitions/SubType1'
-- $ref: '#/definitions/SubType2'
+- $ref: '#/definitions/SmallThing'
+- $ref: '#/definitions/big'
 definitions:
-  SubType1:
+  SmallThing:
     type: object
     additionalProperties: false
     properties:
       '@type':
         type: string
         enum:
-        - type_1
-        default: type_1
-      prop1:
-        type: string
-    title: type_1
-    required:
-    - '@type'
-  SubType2:
-    type: object
-    additionalProperties: false
-    properties:
-      '@type':
-        type: string
-        enum:
-        - type_2
-        default: type_2
+        - Thing$SmallThing
+        default: Thing$SmallThing
       prop2:
         type: string
-    title: type_2
+    title: Thing$SmallThing
+    required:
+    - '@type'
+  big:
+    type: object
+    additionalProperties: false
+    properties:
+      '@type':
+        type: string
+        enum:
+        - big
+        default: big
+      prop1:
+        type: string
+    title: big
     required:
     - '@type'
