--- a/generator/src/test/resources/schemas/flat/org.creekservice.test.types.more.PolymorphicModel.yml
+++ b/generator/src/test/resources/schemas/flat/org.creekservice.test.types.more.PolymorphicModel.yml
@@ -1,36 +1,36 @@
 ---
-# timestamp=1652261637008
+# timestamp=1706376038162
 $schema: http://json-schema.org/draft-07/schema#
-title: Thing
+title: Polymorphic Model
 oneOf:
-- $ref: '#/definitions/SmallThing'
-- $ref: '#/definitions/big'
+- $ref: '#/definitions/SubType1'
+- $ref: '#/definitions/SubType2'
 definitions:
-  SmallThing:
+  SubType1:
     type: object
     additionalProperties: false
     properties:
       '@type':
         type: string
         enum:
-        - Thing$SmallThing
-        default: Thing$SmallThing
-      prop2:
-        type: string
-    title: Thing$SmallThing
-    required:
-    - '@type'
-  big:
-    type: object
-    additionalProperties: false
-    properties:
-      '@type':
-        type: string
-        enum:
-        - big
-        default: big
+        - type_1
+        default: type_1
       prop1:
         type: string
-    title: big
+    title: type_1
+    required:
+    - '@type'
+  SubType2:
+    type: object
+    additionalProperties: false
+    properties:
+      '@type':
+        type: string
+        enum:
+        - type_2
+        default: type_2
+      prop2:
+        type: string
+    title: type_2
     required:
     - '@type'
