--- a/generator/src/test/resources/schemas/flat/org.creekservice.test.types.Thing.yml
+++ b/generator/src/test/resources/schemas/flat/org.creekservice.test.types.Thing.yml
@@ -3,8 +3,8 @@
 $schema: http://json-schema.org/draft-07/schema#
 title: Thing
 oneOf:
-- $ref: '#/definitions/SmallThing'
-- $ref: '#/definitions/big'
+- $ref: "#/definitions/SmallThing"
+- $ref: "#/definitions/big"
 definitions:
   SmallThing:
     type: object
