--- a/generator/src/test/resources/schemas/tree/org/creekservice/test/types/more/PolymorphicModel.yml
+++ b/generator/src/test/resources/schemas/tree/org/creekservice/test/types/more/PolymorphicModel.yml
@@ -3,8 +3,8 @@
 $schema: http://json-schema.org/draft-07/schema#
 title: Polymorphic Model
 oneOf:
-- $ref: '#/definitions/SubType1'
-- $ref: '#/definitions/SubType2'
+- $ref: "#/definitions/SubType1"
+- $ref: "#/definitions/SubType2"
 definitions:
   SubType1:
     type: object
