--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,21 +30,24 @@ jobs:
       - uses: gradle/wrapper-validation-action@f9c9c575b8b21b6485636a91ffecd10e558c62f6 # v3.5.0
       - name: Fetch version history
         # Do NOT want to fetch all tags if building a specific tag.
-        # Doing so could result in code published with wrong version, if newer tags have been pushed
+        # Doing so could result in code published with the wrong version if newer tags have been pushed
         if: (!startsWith(github.ref, 'refs/tags/'))
         run: git fetch --tag --unshallow
       - name: Set up JDK
-        uses: actions/setup-java@7a6d8a8234af8eb26422e24e3006232cccaa061b # v4.6.0
+        uses: actions/setup-java@c5195efecf7bdfc987ee8bae7a71cb8b11521c00 # v4.7.1
         with:
           java-version: '17'
           distribution: 'adopt'
       - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@ac638b010cf58a27ee6c972d7336334ccaf61c96 # v4.4.1
+        uses: gradle/actions/setup-gradle@d156388eb19639ec20ade50009f3d199ce1e2808 # v4.1.0
         with:
           gradle-home-cache-cleanup: true
       - name: Build
         env:
           COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
+          CI_NAME: github-actions
+          CI_JOB_ID: ${{ github.run_id }}
+          CI_PULL_REQUEST: ${{ github.event.pull_request.number }}
         run: ./gradlew build coveralls
       - name: Upload Reports
         if: failure()
@@ -81,9 +84,41 @@ jobs:
         run: |
           ./gradlew -Dgradle.publish.key="$GRADLE_PUBLISH_KEY" -Dgradle.publish.secret="$GRADLE_PUBLISH_SECRET" publishPlugins
 
+  # Until Creek fully supports Windows, minimal check:
+  build_windows:
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - uses: gradle/wrapper-validation-action@f9c9c575b8b21b6485636a91ffecd10e558c62f6 # v3.5.0
+      - name: Set up JDK
+        uses: actions/setup-java@c5195efecf7bdfc987ee8bae7a71cb8b11521c00 # v4.7.1
+        with:
+          java-version: '17'
+          distribution: 'adopt'
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@d156388eb19639ec20ade50009f3d199ce1e2808 # v4.1.0
+        with:
+          gradle-home-cache-cleanup: true
+      - name: Build
+        run: ./gradlew.bat build -PexcludeContainerised
+      - name: Upload reports
+        if: failure()
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
+        with:
+          name: reports-win
+          path: '**/build/reports/**/*.xml'
+          retention-days: 5
+      - name: Upload Test Results
+        if: failure()
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
+        with:
+          name: test-results-win
+          path: '**/build/test-results/**/*.xml'
+          retention-days: 5
+
   create-gh-release:
     if: startsWith(github.ref, 'refs/tags/') && !endsWith(github.ref, '-alpha')
-    needs: build_linux
+    needs: [build_linux, build_windows]
     runs-on: ubuntu-latest
     permissions:
       contents: write
