--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -121,7 +121,7 @@ jobs:
 
   create-gh-release:
     if: startsWith(github.ref, 'refs/tags/') && !endsWith(github.ref, '-alpha')
-    needs: [build_linux]
+    needs: [build_linux,build_windows]
     runs-on: ubuntu-latest
     permissions:
       contents: write
